--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,16 @@
     "require": {
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
+        "laravel/cashier": "~9.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^2.0"
+        "laravel/passport": "^8.4",
+        "laravel/tinker": "^2.0",
+        "pusher/pusher-php-server": "~3.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.9.1",
+        "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
@@ -32,7 +36,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "LaraShout\\ShoppingCart\\": "packages/larashout/shopping-cart/src"
         },
         "classmap": [
             "database/seeds",
